# janus-llm

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  centroidfcn.py  chatgptapi.py  contributing.html  convert_requirements.py  converter.py  elmfire_centroidfcn.f90  final_script.py  genindex.html  index.html  intro.html  logger.py  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  quickstart.html  reading_binaries.html  requirements_analysis.py  requirements_evaluation.py  search.html  searchindex.js  supported_languages.html  temp_script.py  test.f90  translating.html
.github/workflows/: pages.yml  publish.yml
_sources/: contributing.md.txt  index.rst.txt  reading_binaries.md.txt  supported_languages.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/decompile_script/: index.rst.txt
_sources/autoapi/janus/: index.rst.txt
_sources/autoapi/janus/cli/: index.rst.txt
_sources/autoapi/janus/converter/: index.rst.txt
_sources/autoapi/janus/embedding/: index.rst.txt
autoapi/: index.html
autoapi/decompile_script/: index.html
autoapi/janus/: index.html
autoapi/janus/cli/: index.html
autoapi/janus/converter/: index.html
autoapi/janus/embedding/: index.html
autoapi/janus/language/: index.html
autoapi/janus/llm/: index.html
autoapi/janus/metrics/: index.html
autoapi/janus/parsers/: index.html
autoapi/janus/prompts/: index.html
autoapi/janus/translate/: index.html
autoapi/janus/utils/: index.html
docs/source/: conf.py  contributing.md  index.rst  intro.md  quickstart.md  reading_binaries.md  supported_languages.md  translating.md
janus/: __init__.py  __main__.py  cli.py  converter.py  translate.py
janus/_tests/: conftest.py  test_cli.py  test_translate.py
janus/converter/: __init__.py  converter.py  diagram.py  document.py  evaluate.py  requirements.py  translate.py
janus/converter/_tests/: test_translate.py
janus/embedding/: collections.py  database.py  embedding_models_info.py  embeddings.py  vectorize.py
janus/embedding/_tests/: test_collections.py  test_database.py  test_vectorize.py
janus/language/: block.py  combine.py  examples.py  file.py  node.py  pattern.py  splitter.py
janus/language/_tests/: test_combine.py  test_splitter.py
janus/language/alc/: __init__.py  alc.py
janus/language/binary/: __init__.py  binary.py
janus/language/example_source_codes/: example.m
janus/language/fortran/: __init__.py  fortran.py  node.py  patterns.py
janus/language/mumps/: __init__.py  mumps.py  patterns.py
janus/language/naive/: __init__.py  basic_splitter.py  chunk_splitter.py  registry.py  simple_ast.py  tag_splitter.py
janus/language/python/: __init__.py  python.py
janus/language/treesitter/: __init__.py  treesitter.py
janus/llm/: __init__.py  custom.py  embeddings.py  model_callbacks.py  models_info.py  openai.py
janus/metrics/: __init__.py  bleu.py  chrf.py  cli.py  complexity_metrics.py  cyclomatic_complexity.py  file_pairing.py  llm_metrics.py  metric.py  reading.py  rouge_score.py  similarity.py  splitting.py
janus/metrics/_tests/: asm_test_file.asm  mumps_test_file.m  reference.py  test_bleu.py  test_chrf.py  test_cli.py  test_cyclomatic_complexity.py  test_file_pairing.py  test_llm.py  test_reading.py  test_rouge_score.py  test_similarity_score.py  test_treesitter_metrics.py
janus/metrics/prompts/: clarity.txt  completeness.txt  faithfulness.txt  hallucination.txt  quality.txt  readability.txt  usefulness.txt
janus/parsers/: code_parser.py  doc_parser.py  eval_parser.py  reqs_parser.py  uml.py  uml_syntax_parser.py
janus/parsers/_tests/: test_code_parser.py
janus/prompts/: prompt.py
janus/prompts/templates/: README.md
janus/utils/: enums.py  language.py  logger.py  progress.py
janus/utils/_tests/: test_logger.py  test_progress.py
mumps_tests/: PSS1P210_Output V1  PSS54_Output V2  PSS54_Output V3  PSS54_Output V4  PSS54_Output V5  PSS54_Output V6  PSS54_Output V7  PSSBPSUT_Evalaution_V3  PSSBPSUT_Evalaution_V4  PSSBPSUT_Evalaution_V5  PSSBPSUT_Output V2  PSSBPSUT_Output_V3  PSSBPSUT_Output_V4  PSSBPSUT_Output_V5  PSSSEE_Evalaution_V1  PSSSEE_Output_V1  PSSSOLI1_Evalaution_V1  PSSSOLI1_Output_V1  PSSSOLIT_Evalaution_V1  PSSSOLIT_Output_V1  PSSSPD_Evalaution_V1  PSSSPD_Output_V1  PSSSUTIL_Evalaution_V1  PSSSUTIL_Output_V1  PSSSXRD_Evalaution_V1  PSSSXRD_Output_V1  PSSSYN_Evalaution_V1  PSSSYN_Output_V1  PSSTXT_Evalaution_V1  PSSTXT_Output_V1  test.f90
scripts/: Temperature_sweep.py  Temperature_tests.py  cli.py  code_diagnostic_gpt.py  code_diagnostic_pyright.py  combine_comment_jsons.py  convert.py  converter.py  count_syntax_errors.py  count_tokens.py  errors.json  install_plantuml.sh  mask_asm_comments.py  mask_mumps_comments.py  model_split_sweep.py  model_split_tests.py  plantuml  pyright_count_syntax.py  random_subset.py  temp_tests.py  test_split.py  test_translate.py  translate.py
scripts/alc_preprocessor/: config.json  preprocessor.py
scripts/alc_preprocessor/samples/: sample.txt
scripts/pharmacy_input/: PSSCMOPE.m  PSSDSONF.m  PSSHTTP.m  PSSJXR.m  PSSJXR1.m  PSSJXR10.m  PSSJXR11.m  PSSJXR12.m  PSSJXR13.m  PSSJXR14.m  PSSJXR15.m  PSSJXR16.m  PSSJXR17.m  PSSJXR18.m  PSSJXR19.m  PSSJXR2.m  PSSJXR20.m  PSSJXR21.m  PSSJXR22.m  PSSJXR23.m  PSSJXR24.m  PSSJXR25.m  PSSJXR26.m  PSSJXR27.m  PSSJXR28.m  PSSJXR29.m  PSSJXR3.m  PSSJXR30.m  PSSJXR31.m  PSSJXR32.m  PSSJXR33.m  PSSJXR34.m  PSSJXR35.m  PSSJXR36.m  PSSJXR37.m  PSSJXR38.m  PSSJXR39.m  PSSJXR4.m  PSSJXR40.m  PSSJXR41.m  (+17 more)
scripts/pharmacy_output/: PSS0052.py  PSS0093.py  PSS0114.py  PSS102RP.py  PSS117EN.py  PSS117PO.py  PSS127PI.py  PSS127PT.py  PSS129EN.py  PSS147EN.py  PSS147PO.py  PSS160EN.py  PSS160PO.py  PSS164P.py  PSS172PO.py  PSS187PO.py  PSS1P178.py  PSS1P201.py  PSS1P210.py  PSS1P23.py  PSS1P43.py  PSS208P.py  PSS211PO.py  PSS219PO.py  PSS32P3.py  PSS32P5.py  PSS50.py  PSS50A.py  PSS50A1.py  PSS50AQM.py  PSS50ATC.py  PSS50B.py  PSS50B1.py  PSS50B2.py  PSS50C.py  PSS50C1.py  PSS50CMP.py  PSS50D.py  PSS50DAT.py  PSS50DOS.py  (+301 more)
tests/: package.py
(+147 files in other folders)
